# BotMark

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: client.rs  main.rs
