[package]
name = "botmark"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# log
log = "0.4"
simple_logger = "5.0.0"
# CLI
clap = { version = "4.5.42", features = ["derive"] }
# Networking
tokio = { version = "1.47.1", features = ["net", "io-util"] }
pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-protocol", default-features = false, features = ["serverbound", "clientbound"]}
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-data"}

crossbeam = "0.8.4"
uuid = "1.17.0"
rand = "0.9"
