[package]
name = "botmark"
version = "0.1.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# log
log = "0.4"
simple_logger = "5.2.0"
# CLI
clap = { version = "4.6.1", features = ["derive"] }
# Networking
tokio = { version = "1.52.1", features = ["net", "io-util"] }
pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-protocol", default-features = false, features = ["serverbound", "clientbound"]}
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-util"}
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-data"}

crossbeam = "0.8.4"
uuid = "1.23.1"
rand = { git = "https://github.com/rust-random/rand"}
